--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -32,7 +32,7 @@ jobs:
               run: |
                 pip install -U jupyter-book
                 jupyter-book clean .
-                jupyter-book build .
+                jupyter-book build . --verbose
     
             # Save the build output as artifacts (to be reused in deploy stage)
             - name: Upload Build Artifacts
