--- a/_toc.yml
+++ b/_toc.yml
@@ -2,7 +2,7 @@
 # Learn more at https://jupyterbook.org/customize/toc.html
 
 format: jb-book
-root: demos/Fig3
+root: index
 chapters:
 - file: demos/Fig3
 - file: demos/Fig4
