--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ repository:
   branch: main
 
 launch_buttons:
-  notebook_interface: classic  # jupyterlab, classic
+  notebook_interface: jupyterlab  # jupyterlab, classic
   binderhub_url: https://mybinder.org
   # colab_url: https://colab.research.google.com
   # jupyterhub_url: https://jupytercloud.idcs.polytechnique.fr/jupyter
