--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 ############################################################## Book settings ###
+format: jb-book
 
 title: Welcome to [Peyraut & Genet, Submitted]'s demos!
 author: Alice Peyraut & Martin Genet
@@ -48,3 +49,9 @@ launch_buttons:
   binderhub_url: https://mybinder.org
   # colab_url: https://colab.research.google.com
   # jupyterhub_url: https://jupytercloud.idcs.polytechnique.fr/jupyter
+
+
+  sphinx:
+    config:
+      html_theme_options:
+        use_repository_button: true
