--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -33,13 +33,26 @@ jobs:
                 pip install -U jupyter-book
                 jupyter-book clean .
                 jupyter-book build .
-    
-            # Save the build output as artifacts (to be reused in deploy stage)
+
+            - name: Debug build output
+              run: |
+                echo "PWD:" 
+                pwd
+                echo "Listing _build:"
+                ls -R _build || echo "_build missing"
+            
             - name: Upload Build Artifacts
               uses: actions/upload-artifact@v4
               with:
                 name: jupyter-book-build
-                path: _build/html/
+                path: _build/html
+                
+            # # Save the build output as artifacts (to be reused in deploy stage)
+            # - name: Upload Build Artifacts
+            #   uses: actions/upload-artifact@v4
+            #   with:
+            #     name: jupyter-book-build
+            #     path: _build/html/
 
     # Job to deploy the Jupyter Book (only if on the main branch)
     deploy:
