--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -45,7 +45,7 @@ jobs:
               uses: actions/upload-artifact@v4
               with:
                 name: jupyter-book-build
-                path: _build/html
+                path: _build/html/
                 
             # # Save the build output as artifacts (to be reused in deploy stage)
             # - name: Upload Build Artifacts
