--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -9,9 +9,7 @@
 name: Build and Deploy Jupyter Book
 
 on:
-  push:
-    branches:
-      - main
+  - push
   
 jobs:
     build_jupyterbook:
@@ -19,8 +17,8 @@ jobs:
 
         steps:
             # Checkout the code from the repository
-            - name: Checkout code
-              uses: actions/checkout@v3
+            - name: Checkout repository
+              uses: actions/checkout@main
       
             - name: Set up Python
               uses: actions/setup-python@v5
@@ -28,47 +26,21 @@ jobs:
                 python-version: '3.12'
 
 
-            - name: Install and build Jupyter Book
+            - name: Build Jupyter Book
               run: |
                 pip install -U jupyter-book
                 jupyter-book clean .
                 jupyter-book build .
-
-            - name: Debug build output
-              run: |
-                echo "PWD:" 
-                pwd
-                echo "Listing _build:"
-                ls -R _build || echo "_build missing"
-            
-            - name: Upload Build Artifacts
-              uses: actions/upload-artifact@v4
+        
+            - name: Upload artifact
+              uses: actions/upload-pages-artifact@main
               with:
-                name: jupyter-book-build
-                path: './jupyter-book-build/'
-                
-            # # Save the build output as artifacts (to be reused in deploy stage)
-            # - name: Upload Build Artifacts
-            #   uses: actions/upload-artifact@v4
-            #   with:
-            #     name: jupyter-book-build
-            #     path: _build/html/
+                path: "_build/html"
+        
+            - name: Deploy Jupyter Book to GitHub Pages
+              id: deployment
+              uses: actions/deploy-pages@main
 
-    # Job to deploy the Jupyter Book (only if on the main branch)
-    deploy:
-        runs-on: ubuntu-latest
-        needs: build_jupyterbook
-        if: github.ref == 'refs/heads/main'
-
-        permissions:
-            pages: write
-            id-token: write
-
-        environment:
-            name: github-pages
-            url: ${{ steps.deployment.outputs.page_url }}
-
-        steps:
             # Checkout the code from the repository
             - name: Checkout code
               uses: actions/checkout@v3
@@ -93,13 +65,7 @@ jobs:
               with:
             # Upload entire repository
                 path: './jupyter-book-build/'
-                
-            # Deploy to GitHub Pages
-            - name: Deploy to GitHub Pages
-              id: deployment
-              uses: actions/deploy-pages@v4
-              env:
-                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
 
 
