--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -10,67 +10,37 @@ name: Build and Deploy Jupyter Book
 
 on:
   - push
-  
+
 jobs:
-    build_jupyterbook:
-        runs-on: ubuntu-latest
+  build_and_deploy_jupyter_book:
+    runs-on: ubuntu-latest
 
-        steps:
-            # Checkout the code from the repository
-            - name: Checkout repository
-              uses: actions/checkout@main
-      
-            - name: Set up Python
-              uses: actions/setup-python@v5
-              with:
-                python-version: '3.12'
+    permissions:
+      pages: write
+      id-token: write
 
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@main
 
-            - name: Build Jupyter Book
-              run: |
-                pip install -U jupyter-book
-                jupyter-book clean .
-                jupyter-book build .
-        
-            - name: Upload artifact
-              uses: actions/upload-pages-artifact@main
-              with:
-                path: "_build/html"
-        
-            - name: Deploy Jupyter Book to GitHub Pages
-              id: deployment
-              uses: actions/deploy-pages@main
+    - name: Build Jupyter Book
+      run: |
+        pip install -U jupyter-book
+        jupyter-book clean .
+        jupyter-book build .
 
-            # Checkout the code from the repository
-            - name: Checkout code
-              uses: actions/checkout@v3
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@main
+      with:
+        path: "_build/html"
 
-            # Download the build artifacts from the previous job
-            - name: Download Build Artifacts
-              uses: actions/download-artifact@v4
-              with:
-                name: jupyter-book-build
-                path: './jupyter-book-build/'
-
-            - name: Configure Pages
-              uses: actions/configure-pages@v5
-
-            - name: Debug
-              run: |
-                pwd
-                ls -ltr
-
-            - name: Upload artifact
-              uses: actions/upload-pages-artifact@v4
-              with:
-            # Upload entire repository
-                path: './jupyter-book-build/'
+    - name: Deploy Jupyter Book to GitHub Pages
+      id: deployment
+      uses: actions/deploy-pages@main
 
 
 
-
-
-    build_docker_image:
+  build_docker_image:
         if: false
 
         runs-on: ubuntu-20.04
