--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-pages-artifact@main
       with:
-        path: "_build/html"
+        path: "gravity_modeling_paper_demos_github/_build/html"
 
     - name: Deploy Jupyter Book to GitHub Pages
       id: deployment
