--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -21,6 +21,7 @@ jobs:
           pip install -U jupyter-book
           jupyter-book clean .
           jupyter-book build .
+      - run: ls -R
       - uses: actions/upload-pages-artifact@v3
         with:
           path: /_build/html
