--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -9,35 +9,89 @@
 name: Build and Deploy Jupyter Book
 
 on:
-  - push
-
-
+  push:
+    branches:
+      - main
+  
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - run: |
-          pip install -U jupyter-book
-          jupyter-book clean .
-          jupyter-book build .
-      - run: ls -R
-      - uses: actions/upload-pages-artifact@v3
-        with:
-          path: /_build
+    build_jupyterbook:
+        runs-on: ubuntu-latest
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
-    steps:
-      - uses: actions/deploy-pages@v4
-        id: deployment
+        steps:
+            # Checkout the code from the repository
+            - name: Checkout code
+              uses: actions/checkout@v3
+      
+            - name: Set up Python
+              uses: actions/setup-python@v5
+              with:
+                python-version: '3.12'
 
 
-  build_docker_image:
+            - name: Install and build Jupyter Book
+              run: |
+                pip install -U jupyter-book
+                jupyter-book clean .
+                jupyter-book build .
+    
+            # Save the build output as artifacts (to be reused in deploy stage)
+            - name: Upload Build Artifacts
+              uses: actions/upload-artifact@v4
+              with:
+                name: jupyter-book-build
+                path: _build/html/
+
+    # Job to deploy the Jupyter Book (only if on the main branch)
+    deploy:
+        runs-on: ubuntu-latest
+        needs: build_jupyterbook
+        if: github.ref == 'refs/heads/main'
+
+        permissions:
+            pages: write
+            id-token: write
+
+        environment:
+            name: github-pages
+            url: ${{ steps.deployment.outputs.page_url }}
+
+        steps:
+            # Checkout the code from the repository
+            - name: Checkout code
+              uses: actions/checkout@v3
+
+            # Download the build artifacts from the previous job
+            - name: Download Build Artifacts
+              uses: actions/download-artifact@v4
+              with:
+                name: jupyter-book-build
+                path: './jupyter-book-build/'
+
+            - name: Configure Pages
+              uses: actions/configure-pages@v5
+
+            - name: Debug
+              run: |
+                pwd
+                ls -ltr
+
+            - name: Upload artifact
+              uses: actions/upload-pages-artifact@v3
+              with:
+            # Upload entire repository
+                path: './jupyter-book-build/'
+                
+            # Deploy to GitHub Pages
+            - name: Deploy to GitHub Pages
+              id: deployment
+              uses: actions/deploy-pages@v4
+              env:
+                GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+
+
+    build_docker_image:
         if: false
 
         runs-on: ubuntu-20.04
