--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ latex:
 repository:
   url: https://github.com/alicepeyraut/gravity-modeling-paper-demos
   path_to_book: .
-  branch: main
+  branch: master
 
 launch_buttons:
   notebook_interface: jupyterlab  # jupyterlab, classic
