--- a/myst.yml
+++ b/myst.yml
@@ -1,3 +1,14 @@
-- name: Build MyST
-  run: myst build
-  working-directory: gravity_modeling_paper_demos_github
+# myst.yml
+book:
+  root: "."        
+
+toc:
+  - file: index    # main page
+  - chapters:
+      - file: demos/Fig3
+      - file: demos/Fig4
+      - file: demos/Fig8
+      - file: demos/Fig9
+
+execute:
+  execute_notebooks: "off"   
