--- a/_toc.yml
+++ b/_toc.yml
@@ -4,7 +4,7 @@
 format: jb-book
 root: index
 chapters:
-  - file: demos/Fig3
-  - file: demos/Fig4
-  - file: demos/Fig8
-  - file: demos/Fig9
+  - file: demos/Fig3.ipynb
+  - file: demos/Fig4.ipynb
+  - file: demos/Fig8.ipynb
+  - file: demos/Fig9.ipynb
