--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -34,14 +34,13 @@ jobs:
                 pip install -U jupyter-book
                 jupyter-book clean .
                 jupyter-book build .
-              working-directory: gravity_modeling_paper_demos_github
     
             # Save the build output as artifacts (to be reused in deploy stage)
             - name: Upload Build Artifacts
               uses: actions/upload-artifact@v4
               with:
                 name: jupyter-book-build
-                path: _build/html/
+                path: ./_build/html/
 
     # Job to deploy the Jupyter Book (only if on the main branch)
     deploy:
