--- a/_toc.yml
+++ b/_toc.yml
@@ -1,10 +1,8 @@
-# Table of contents
-# Learn more at https://jupyterbook.org/customize/toc.html
-
 format: jb-book
-root: index.md
+root: index
+
 chapters:
-  - file: demos/Fig3.ipynb
-  - file: demos/Fig4.ipynb
-  - file: demos/Fig8.ipynb
-  - file: demos/Fig9.ipynb
+  - file: demos/Fig3
+  - file: demos/Fig4
+  - file: demos/Fig8
+  - file: demos/Fig9
