--- a/.github/workflows/_publish.yml
+++ b/.github/workflows/_publish.yml
@@ -31,7 +31,7 @@ jobs:
                 
             - name: Install and build Jupyter Book
               run: |
-                pip install -U jupyter-book
+                pip install -U jupyter-book==0.15.1
                 jupyter-book clean .
                 jupyter-book build .
     
