--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ############################################################## Book settings ###
 format: jb-book
 
-title: Welcome to [Peyraut & Genet, Submitted]'s demos!
+title: Welcome to [Peyraut & Genet, 2024]'s demos!
 author: Alice Peyraut & Martin Genet
 logo: logo.png
 copyright: "2024"
